--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!-- Gambar Portofolio -->
             <img class="icon-portofolio" src="image/_1090987.jpg" />
             <img class="icon-portofolio" src="image/DSC01539.JPG" />
-            <img class="icon-portofolio" src="image/_1080233.jpg" />
+            <img class="icon-portofolio" src="image/1080233.jpg" />
             <img class="icon-portofolio" src="image/_1090004-2.jpg" />
             <br>
             <img class="icon-portofolio" src="image/Logo Design.jpg" />
