--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
           <hr>
           <div class="image-container">
             <!-- Gambar Portofolio -->
-            <img class="icon-portofolio" src="image/_1090987.jpg" />
+            <img class="icon-portofolio" src="image/1090987.jpg" />
             <img class="icon-portofolio" src="image/DSC01539.JPG" />
             <img class="icon-portofolio" src="image/1080233.jpg" />
-            <img class="icon-portofolio" src="image/_1090004-2.jpg" />
+            <img class="icon-portofolio" src="image/1090004-2.jpg" />
             <br>
             <img class="icon-portofolio" src="image/Logo Design.jpg" />
-            <img class="icon-portofolio" src="image/_1110007.JPG" />
-            <img class="icon-portofolio" src="image/_1110010.JPG" />
-            <img class="icon-portofolio" src="image/_1090995.jpg" />
+            <img class="icon-portofolio" src="image/1110007.JPG" />
+            <img class="icon-portofolio" src="image/1110010.JPG" />
+            <img class="icon-portofolio" src="image/1090995.jpg" />
           </div>
           <h3>Galeri Video on</h3>
           <a href="http://bit.ly/4k60gtj" class="cta-button">Instagram</a>
