--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
             style="width: 20px; height: auto; vertical-align: middle;" /></a>
           <a href="https://wa.me/6281212402633"><img class="icon-contact" src="image/email-12-16.png" alt="Email" 
             style="width: 20px; height: auto; vertical-align: middle;" /></a>
-          <a href="https://wa.me/6281212402633"><img class="icon-contact" src="image/twitter-x-16.png" alt="Twitter" 
+          <a href="https://https://x.com/108wardi?t=0akoJmCd3B6hds-QJvX-UA&s=09"><img class="icon-contact" src="image/twitter-x-16.png" alt="Twitter" 
             style="width: 20px; height: auto; vertical-align: middle;" /></a>
-          <a href="https://wa.me/6281212402633"><img class="icon-contact" src="image/instagram-4-16.png" alt="Instagram" 
+          <a href="http://bit.ly/4k60gtj"><img class="icon-contact" src="image/instagram-4-16.png" alt="Instagram" 
             style="width: 20px; height: auto; vertical-align: middle;" /></a>
-          <a href="https://wa.me/6281212402633"><img class="icon-contact" src="image/tiktok-16.png" alt="Tiktok" 
+          <a href="https://www.tiktok.com/@wardi1083?_t=ZS-8xYnCp0jgVc&_r=1"><img class="icon-contact" src="image/tiktok-16.png" alt="Tiktok" 
             style="width: 20px; height: auto; vertical-align: middle;" /></a>
         </div>
       </section>
