--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
           <a href="http://bit.ly/4k60gtj" class="cta-button">Instagram</a>
         </div>
       </section>
+      <audio id="bg-music" loop style="display: none;">
+     <source src="audio/musik-latar.mp3" type="audio/mpeg">
+      </audio>
 
       <!-- Contact -->
       <section id="contact">
