--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
         </div>
       </section>
       <audio id="bg-music" loop style="display: none;">
-     <source src="audio/musik-latar.mp3" type="audio/mpeg">
+     <source src="Inspiring & Uplifting Background Music For Videos & Presentations.mp3" type="audio/mpeg">
       </audio>
+      <button onclick="toggleMusic()" class="cta-button">🎵 Musik</button>
+
 
       <!-- Contact -->
       <section id="contact">
@@ -161,11 +163,20 @@
     const navLinks = document.getElementById('nav-links');
     const links = document.querySelectorAll('.nav-links a');
     const loader = document.getElementById('loader');
+    const music = document.getElementById('bg-music');
+  let isPlaying = false;
 
     toggle.addEventListener('click', () => {
       navLinks.classList.toggle('active');
     });
-
+   function toggleMusic() {
+    if (isPlaying) {
+      music.pause();
+    } else {
+      music.play();
+    }
+    isPlaying = !isPlaying;
+  }
     links.forEach(link => {
       link.addEventListener('click', function (e) {
         const targetHref = this.getAttribute('href');
