--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </section>
       <audio id="bg-music" loop style="display: none;">
-     <source src="Inspiring & Uplifting Background Music For Videos & Presentations.mp3" type="audio/mpeg">
+     <source src="image/Inspiring & Uplifting Background Music For Videos & Presentations.mp3" type="audio/mpeg">
       </audio>
       <button onclick="toggleMusic()" class="cta-button">🎵 Musik</button>
 
