--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <a href="http://bit.ly/4k60gtj" class="cta-button">Instagram</a>
         </div>
       </section>
-      <audio id="bg-music" loop style="display: none;">
+      <audio id="bg-music" autoplay muted loop="display: none;">
      <source src="image/Inspiring & Uplifting Background Music For Videos & Presentations.mp3" type="audio/mpeg">
       </audio>
       <button onclick="toggleMusic()" class="cta-button">🎵 Musik</button>
